--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Zachary Speiser
 description: Summer 2023 DREU Project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://akzspeiser.github.io/images/new 794.jpg
+avatar: https://akzspeiser.github2.io/images/new 794.jpg
 
 #
 # Flags below are optional
@@ -25,7 +25,7 @@ footer-links:
 
 # Your website URL (e.g. http://ajstent.github.io)
 # Used for Sitemap.xml and your RSS feed
-url: https://akzspeiser.github.io
+url: https://akzspeiser.github2.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
