--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Zachary Speiser
 description: Summer 2023 DREU Project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://akzspeiser.github2.io/images/new 794.jpg
+avatar: https://akzspeiser.github2.io/images/me.jpg
 
 #
 # Flags below are optional
